@@ -1,10 +1,37 @@
 # List of source files which contain translatable strings.
+
+# Package source files.
+
+src/rec-aggregate.c
+src/rec-buf.c
+src/rec.c
+src/rec-comment.c
+src/rec-crypt.c
+src/rec-crypt-dummy.c
+src/rec-db.c
+src/rec-fex.c
+src/rec-field.c
+src/rec-field-name.c
+src/rec-int.c
+src/rec-mset.c
+src/rec-parser.c
+src/rec-record.c
+src/rec-rset.c
+src/rec-sex-ast.c
+src/rec-sex.c
+src/rec-sex-parser.c
+src/rec-types.c
 src/rec-utils.c
+src/rec-writer.c
+
 utils/csv2rec.c
 utils/mdb2rec.c
 utils/rec2csv.c
 utils/recdel.c
 utils/recfix.c
 utils/recfmt.c
-bash/readrec.c
-bash/testrec.c
+utils/recinf.c
+utils/recins.c
+utils/recsel.c
+utils/recset.c
+utils/recutl.c
