@@ -1,3 +1,7 @@
+2018-03-18  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* POTFILES.in: Updated.
+
 2018-03-17  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* POTFILES.in: recreate after last gettexttize.
